# TinySimulator

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  readme_cn.md
.github/workflows/: linux.yml  macos.yml  windows.yml
ext/: CMakeLists.txt
ext/glad/include/: glad.h
ext/glad/src/: glad.c
include/assets/: async_resource_loader.h  fwd.h  resource.h  resource_loader.h  resource_manager.h
include/assets/model/: async_model_loader.h  model.h  model_loader.h  model_manager.h
include/assets/resource/: async_resource_loader.h  resource.h  resource_loader.h  resource_manager.h
include/assets/shader/: async_shader_loader.h  shader.h  shader_loader.h  shader_manager.h
include/assets/texture/: async_texture_loader.h  texture.h  texture_loader.h  texture_manager.h
include/core/: callback.h  common.h  fwd.h  global.h  loop.h
include/core/event/: event.h  event_manager.h
include/core/filesystem/: fwd.h  path.h  resolver.h
include/core/window/: window_manager.h
include/ecs/: coordinator.h  fwd.h
include/ecs/component/: cloth.h  collider.h  component_array.h  component_manager.h  renderable.h  rigidbody.h  transform.h
include/ecs/component/core/: hierarchy.h  tag.h  transform.h
include/ecs/component/customize/: customize.h
include/ecs/component/debug/: debug.h
include/ecs/component/physics/: collider.h  rigid_body.h
include/ecs/component/render/: camera.h  light.h  model.h  texture.h
include/ecs/component/ui/: text.h
include/ecs/entity/: entity_manager.h
include/ecs/system/: input.h  physics.h  render.h  system.h  system_manager.h
include/ecs/system/physics_subsystem/: collision_system.h  pbd_cloth_system.h  physics_subsystem.h  rigidbody_system.h
include/ecs/system/render/: render_system.h
include/gui/: hierarchy_panel.h  resource_panel.h
include/renderer/: frame_buffer.h
include/scene/camera/: camera.h
include/scene/light/: light.h
include/scene/model/: async_model_loader.h  model.h  model_loader.h  model_manager.h  primitive_generator.h
include/scene/resource/: async_resource_loader.h  resource.h  resource_loader.h  resource_manager.h
include/scene/scene/: scene.h
include/scene/shader/: async_shader_loader.h  shader.h  shader_loader.h  shader_manager.h
include/scene/texture/: async_texture_loader.h  texture.h  texture_loader.h  texture_manager.h
shaders/blinn_phong/: blinn_phong.frag  blinn_phong.vert
shaders/constant/: constant.frag  constant.vert
src/: CMakeLists.txt
src/assets/: CMakeLists.txt  fwd.cpp
src/assets/model/: CMakeLists.txt  async_model_loader.cpp  model.cpp  model_loader.cpp  model_manager.cpp
src/assets/shader/: async_shader_loader.cpp  shader.cpp  shader_loader.cpp  shader_manager.cpp
src/assets/texture/: CMakeLists.txt  async_texture_loader.cpp  texture.cpp  texture_loader.cpp  texture_manager.cpp
src/core/: CMakeLists.txt  callback.cpp  common.cpp  fwd.cpp  global.cpp  loop.cpp  main.cpp
src/core/event/: CMakeLists.txt  event.cpp  event_manager.cpp
src/core/filesystem/: CMakeLists.txt  resolver.cpp
src/core/window/: CMakeLists.txt  window_manager.cpp
src/ecs/: CMakeLists.txt  coordinator.cpp  fwd.cpp
src/ecs/component/: CMakeLists.txt  cloth.cpp  collider.cpp  component_manager.cpp  rigidbody.cpp  transform.cpp
src/ecs/entity/: CMakeLists.txt  entity_manager.cpp
src/ecs/system/: CMakeLists.txt  input.cpp  physics.cpp  render.cpp  system_manager.cpp
src/ecs/system/physics_subsystem/: CMakeLists.txt  collision_system.cpp  pbd_cloth_system.cpp  rigidbody_system.cpp
src/gui/: CMakeLists.txt  hierarchy_panel.cpp  resource_panel.cpp
src/main/: main.cpp
src/render/: CMakeLists.txt  frame_buffer.cpp
src/renderer/: CMakeLists.txt  frame_buffer.cpp
src/scene/: CMakeLists.txt
src/scene/camera/: CMakeLists.txt  camera.cpp
src/scene/light/: CMakeLists.txt  light.cpp
src/scene/model/: CMakeLists.txt  async_model_loader.cpp  model.cpp  model_loader.cpp  model_manager.cpp  primitive_generator.cpp
src/scene/resource/: CMakeLists.txt  resource.cpp
src/scene/scene/: CMakeLists.txt  scene.cpp
src/scene/shader/: CMakeLists.txt  async_shader_loader.cpp  shader.cpp  shader_loader.cpp  shader_manager.cpp
src/scene/texture/: CMakeLists.txt  async_texture_loader.cpp  texture.cpp  texture_loader.cpp  texture_manager.cpp
